@@ -1,0 +1,4 @@
+SUBDIRS = gendef atkmm pangomm gdkmm gtkmm demos examples
+
+EXTRA_DIST = gtkmm.sln \
+             README
