@@ -1,0 +1,3 @@
+SUBDIRS = arrow calendar cellrenderercustom_popup cellrenderercustom_toggle \
+	direction dnd exception gdk rulers statusbar stock tictactoe \
+	treemodelcustom window
