@@ -1,0 +1,1 @@
+EXTRA_DIST = gdkmm.vcproj gdkmmconfig.h
