@@ -1,0 +1,2 @@
+EXTRA_DIST = gendef.vcproj gendef.cc
+
