@@ -380,5 +380,31 @@ AC_CONFIG_FILES([
     docs/reference/Doxyfile
 ])
 
+AC_CONFIG_FILES([
+  MSVC_Net2003/Makefile
+    MSVC_Net2003/gendef/Makefile
+    MSVC_Net2003/atkmm/Makefile
+    MSVC_Net2003/pangomm/Makefile
+    MSVC_Net2003/gdkmm/Makefile
+    MSVC_Net2003/gtkmm/Makefile
+    MSVC_Net2003/demos/Makefile
+      MSVC_Net2003/demos/gtk-demo/Makefile
+    MSVC_Net2003/examples/Makefile
+      MSVC_Net2003/examples/arrow/Makefile
+      MSVC_Net2003/examples/calendar/Makefile
+      MSVC_Net2003/examples/cellrenderercustom_popup/Makefile
+      MSVC_Net2003/examples/cellrenderercustom_toggle/Makefile
+      MSVC_Net2003/examples/direction/Makefile
+      MSVC_Net2003/examples/dnd/Makefile
+      MSVC_Net2003/examples/exception/Makefile
+      MSVC_Net2003/examples/gdk/Makefile
+      MSVC_Net2003/examples/rulers/Makefile
+      MSVC_Net2003/examples/statusbar/Makefile
+      MSVC_Net2003/examples/stock/Makefile
+      MSVC_Net2003/examples/tictactoe/Makefile
+      MSVC_Net2003/examples/treemodelcustom/Makefile
+      MSVC_Net2003/examples/window/Makefile
+])
+
 AC_OUTPUT()
 
