@@ -1,5 +1,11 @@
 2004-11-03  Cedric Gustin  <cedric.gustin@swing.be>
   
+	* MSVC_Net2003/*/Makefile.am: Initial release.
+	* configure.in: Added MSVC_Net2003 Makefiles.
+	* Makefile.am: Added MSVC_Net2003 subdir.
+
+2004-11-03  Cedric Gustin  <cedric.gustin@swing.be>
+  
 	* MSVC_Net2003/: Added examples and tests projects from Timothy Shead.
 	* gtk/gtkmmconfig.h.in: Added dllexport/dllimport macros for
 	MSVC. Requires glibmm > 2.4.6 (for glibmmconfig.h).
